objects/Bus__c.object
<CustomObject>
    <fields>
        <fullName>BusDestination__c</fullName>
        <label>BusDestination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNG</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>DMM</fullName>
                </value>
                <value>
                    <fullName>HNDP</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>Tirupathi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusLookUpField1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bus</label>
        <referenceTo>Bus__c</referenceTo>
        <relationshipLabel>Buses</relationshipLabel>
        <relationshipName>Buses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusSource__c</fullName>
        <label>BusSource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amaravathi</fullName>
                </value>
                <value>
                    <fullName>BNG</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>Kurnool</fullName>
                </value>
                <value>
                    <fullName>Tirupathi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusTextField1__c</fullName>
        <label>BusTextField1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Bus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>bus_view1</fullName>
        <columns>NAME</columns>
        <columns>BusDestination__c</columns>
        <columns>BusSource__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>s</value>
        </filters>
        <label>bus view1</label>
    </listViews>
    <nameField>
        <label>Bus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>